# solana-arb-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .solhint.json  .sops.yaml  .sops.yaml.example  Dockerfile  README.md  STRUCTURE.md  cex_dex_sim_batch.py  compose.env.example  demo-script.js  demo-scripts.js  docker-compose.security.override.yml  docker-compose.yml  env.from.example.txt  fetch_cex_dex_prices.py  harden-vps-baseline.sh  hardhat.config.ts  main.py  monitor_main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-hw.txt  requirements-ml.txt  requirements.txt  tsconfig.json
_patch_smoke/: cex_dex_arb.patch  cex_dex_arb.py  openai_helper.patch  openai_helper.py  solana_cex_dex_flash_bot.patch  solana_cex_dex_flash_bot.py
alchemy-demo/: demo-script.js  package-lock.json  package.json
attachments/: cex_dex_arb.patch  flash_bot.patch  main.py  openai_helper.patch
backtest_results/: README.md
contracts/: ArbMonitorRegistry.sol
docs/: GO_LIVE.md  MONITORING.md  PHASE3_DEPLOY.md  SETUP.md  SIGNING.md  TIER_F_CAPITAL.md  UPTIME_24H.md  V2.md  VPS_HARDENING.md
logs/: README.md
ops/: VPS_OPS_REFERENCE.md  auto-relax-min-sim-net.sh  capture-status.sh  cost-final-push.sh  cost-final-tune.sh  expand-to-15-pairs.sh  final-meme-boost.sh  fix-multi-pair-run-cycle.sh  fix-pair-env.sh  fix-sizing-final.sh  harden-vps-baseline.sh  logs-ops-README.md  meme-sniping-1h-watch.sh  monitor-spreads.sh  monitor-status.sh  optimize-cost-model.sh  per-pair-optimize.sh  per-pair-sizing.sh  (+7 more)
(+428 files in other folders)
