[project]
name = "solana-bot"
version = "0.2.0"
description = "Solana CEX-DEX arbitrage bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.0",
    "python-dotenv>=1.0.0",
    "ccxt>=4.5.56",
    "solders>=0.27.0",
    "solana>=0.36.0",
    "base58>=2.1.1",
    "openai>=2.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.136.0",
    "uvicorn>=0.48.0; sys_platform == 'win32'",
    "uvicorn[standard]>=0.48.0; sys_platform != 'win32'",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "prometheus-client>=0.20.0",
    "pybreaker>=1.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "web3>=7.16.0",
    "tenacity>=8.2.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
ml = ["numpy>=1.26", "pandas>=2.2", "scikit-learn>=1.4"]
dev = ["pytest", "ruff", "mypy", "black"]
jito-searcher = ["jito-searcher-client>=0.1.6"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "S"]  # S = bandit security
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["src"]
strict = true
